I am feeding my family!

--- a/index.HTML
+++ b/index.HTML
@@ -5,7 +5,7 @@
     </title>
 </head> 
 <body>
-<h1>I love script!</h1>
+<h1>I love script! I love making money</h1>
 
 <script src = "js.js"></script>
 </body> 
