Feeding my family

--- a/index.HTML
+++ b/index.HTML
@@ -3,10 +3,11 @@
     <title>
     My favorite cup of soup is ....
     </title>
+    <link href = "style.css" rel = "stylesheet" />
 </head> 
 <body>
 <h1>I love script! I love making money</h1>
-
+<button id = "mybutton">MYsweet button!!!!</button>
 <script src = "js.js"></script>
 </body> 
 
